--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
