--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,10 @@
   "name": "i-want-to-pass",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://christochow.github.io/i-want-to-pass",
   "dependencies": {
     "@material-ui/core": "^4.7.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
