--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,12 @@
   "homepage": "https://christochow.github.io/i-want-to-pass",
   "dependencies": {
     "@material-ui/core": "^4.7.0",
-    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4"
   },
   "scripts": {
@@ -36,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
