--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,15 @@
 # misc
 .DS_Store
 
-# ios
+#Andoird
+**/android/**/gradle-wrapper.jar
+**/android/.gradle
+**/android/captures/
+**/android/gradlew
+**/android/gradlew.bat
+**/android/local.properties
+**/android/**/GeneratedPluginRegistrant.java
+
 # iOS/XCode related
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
