--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.7.0",
     "react": "^16.12.0",
     "react-cookie": "^4.0.1",
+    "react-cookie-banner": "^4.1.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
